removed deprecated new Integer()